# hunchdown

./: .gitignore  CLAUDE.md  README.md  download_from_list.py  fb_unscrambler.py  li_ideal.json  pyproject.toml
hrb/: __init__.py  __main__.py  bulk_download.py  locator.py  parser.py  pdf_export.py  platforms.py  presets.py  raw_export.py  video.py  writer.py
hrb/dates/: __init__.py  facebook.py  mhtml_universal.py
hrb/vision/: __init__.py  _common.py  _profile.py  facebook.py  instagram.py  tiktok.py
presets/: _defaults.json
presets/cashapp/: main_account.json
presets/facebook/: main_account.json  main_account_tuning.json  single_post.json
presets/instagram/: main_account.json  main_account_tuning.json  single_post.json
presets/linkedin/: main_account.json
presets/pinterest/: main_account.json
presets/snapchat/: main_account.json
presets/threads/: main_account.json
presets/tiktok/: main_account.json  single_post.json
presets/venmo/: main_account.json
presets/x/: main_account.json
presets/yelp/: main_account.json
presets/youtube/: main_account.json
tools/: annotate.py  bake_static_crop.py  debug_ig.py  tune_crop.py  verify_against_annotations.py
