[project]
name = "hrb"
version = "0.1.0"
description = "Hunchly Report Builder — transforms OSINT case exports into structured per-platform exhibits"
authors = [
    { name = "Dylan Hackett", email = "dylanhackett28@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "docx2pdf>=0.1.8",
    "lxml>=6.1.1",
    "numpy>=2.0",
    "opencv-python>=4.10",
    "pillow>=12.2.0",
    "python-dateutil>=2.9.0.post0",
    "python-docx>=1.2.0",
    "yt-dlp>=2026.7.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
